# cow-amm

./: .gitignore  .gitmodules  README.md  foundry.toml  networks.json
.devcontainer/: devcontainer.json
.github/workflows/: test.yml
dev/: generate-networks-file.sh
dev/hooks/: install.md  pre-commit
docs/: amm.md  funding-module.md
script/: Deploy.sol  DeployAllContracts.s.sol
script/libraries/: EnvReader.sol  Utils.sol
script/single-deployment/: BalancerWeightedPoolPriceOracle.s.sol  ChainlinkPriceOracle.s.sol  ConstantProduct.s.sol  ConstantProductFactory.s.sol  ConstantProductHelper.s.sol  CowAmmModule.s.sol  UniswapV2PriceOracle.s.sol
src/: ConstantProduct.sol  ConstantProductFactory.sol  ConstantProductHelper.sol  ConstantProductSnapshot.sol  CowAmmModule.sol  FundingModule.sol  UniswapV2PriceOracle.sol
src/interfaces/: AggregatorV3Interface.sol  IBalancer.sol  ICOWAMMPoolFactory.sol  ICOWAMMPoolHelper.sol  IPriceOracle.sol  IPyth.sol  ISettlement.sol  IUniswapV3Pool.sol  IWatchtowerCustomErrors.sol
src/legacy/: Helper.sol  Snapshot.sol
src/libraries/: GetTradeableOrder.sol  SafeModuleAddress.sol  SafeModuleSafeERC20.sol
src/oracles/: BalancerWeightedPoolPriceOracle.sol  ChainlinkPriceOracle.sol  PythPriceOracle.sol  (+2 more)
test/: ConstantProduct.t.sol  ConstantProductFactory.t.sol  CowAmmModule.t.sol  FundingModule.t.sol  UniswapV2PriceOracle.sol
utils/: Cargo.toml
utils/abi/: ComposableCoW.json  ConstantProductHelper.json  GPv2Settlement.json  IPriceOracle.json
utils/crates/common/: Cargo.toml
utils/crates/common/src/: contracts.rs  lib.rs
(+99 files in other folders)
